# TokReducer

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.firebase.yml  docker-compose.yml  firestore.rules  start.bat  start.sh
.github/workflows/: security.yml
backend/python/: .dockerignore  Dockerfile  pyproject.toml
backend/python/tests/: conftest.py  test_audit_log.py  test_code_review.py  test_compression.py  test_data_analysis.py  test_document_writing.py  test_middleware.py  test_no_mirroring.py  test_output_completeness.py  test_server_agreement.py  test_server_auth.py  test_server_compress.py  test_server_config.py  test_server_health.py  test_server_logs.py  test_server_proxy.py  test_server_stripe.py  test_server_usage.py
backend/python/tokreducer/: __init__.py  compressor.py  middleware.py  rust_compressor.py  system_prompt.py  tokenizer.py
backend/python/tokreducer/api/: server.py
backend/python/tokreducer/layers/: __init__.py  lexical.py  semantic.py  structural.py
backend/python/tokreducer/testing/: __init__.py  client.py  compare.py
backend/rust/: Cargo.toml  Dockerfile
backend/rust/src/: compressor.rs  lib.rs  system_prompt.rs  tokenizer.rs
backend/rust/src/layers/: lexical.rs  mod.rs  semantic.rs  structural.rs
backend/rust/tests/: compression_tests.rs  integration_tests.rs
web/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  firebase.ts  index.css
web/src/components/: ErrorBoundary.tsx
web/src/context/: AuthContext.tsx
web/src/pages/: Agreement.tsx  Connections.tsx  Login.tsx  Logs.tsx  VerifyEmail.tsx
web/src/utils/: sanitize.ts
