[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokreducer"
version = "1.0.0"
description = "Token Compression Protocol for Large Language Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.5.0",
]
openai = ["openai>=1.35.0"]
anthropic = ["anthropic>=0.30.0"]
ollama = ["requests>=2.32.0"]
all = [
    "tokreducer[api,openai,anthropic,ollama]",
]
testing = [
    "tokreducer[all]",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
tokreducer = "tokreducer.api.server:cli_main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a live LLM API key",
]
