[package]
name = "tokreducer"
version = "1.0.0"
edition = "2021"
description = "Token Compression Protocol for Large Language Models"
license = "MIT"

[lib]
name = "tokreducer"
path = "src/lib.rs"

[[bin]]
name = "tokreducer-cli"
path = "src/bin/tokreducer_cli.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:clap"]

[dependencies]
tiktoken-rs = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI-only dependencies
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
